# partiguiden-backend

./: .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  Dockerfile.db  Makefile  Pipfile  Procfile  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  schema.yml
.config/: black.cfg  flake8.cfg  isort.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot.yml
.vscode.example/: settings.json
analytics/: urls.py  views.py
analytics/scripts/: get_reports.py  initialize_analytics.py
partiguiden/: settings.py  urls.py  wsgi.py
proxy/: urls.py  views.py
proxy/scripts/: __init__.py  decisions.py  document.py  members.py  parties.py  vote.py  votes.py  wikipedia.py
proxy/scripts/serializers/: absence.py  decisions.py  members.py  parties.py  vote.py  votes.py  wikipedia.py
standpoints/: admin.py  apps.py  constants.py  models.py  serializer.py  urls.py  views.py
standpoints/migrations/: 0001_alter_standpoint_subject.py  0001_initial.py  0001_squashed_0005_auto_20200309_1432.py  0002_auto_20200310_1624.py  0002_auto_20210306_2249.py  0002_auto_20210625_1956.py  0002_type_improvements.py  0003_auto_20210307_0932.py  0003_auto_20210625_2014.py  0003_standpoint_link.py  0004_auto_20200310_1657.py  0004_auto_20210413_0959.py  0004_auto_20210626_1137.py  0005_alter_subject_related_subjects.py  0005_auto_20200313_1445.py  0006_alter_standpoint_date.py  0007_remove_standpoint_id_alter_standpoint_link.py  create_default_subject.py  create_parties.py
standpoints/modules/party/: party_model.py  party_requests.py  party_urls.py
standpoints/modules/standpoint/: standpoint_logic.py  standpoint_model.py  standpoint_requests.py  standpoint_url.py
standpoints/modules/subject/: subject_model.py  subject_requests.py  subject_urls.py
standpoints/scripts/: update_standpoints.py
standpoints/scripts/party_data/: data.py  data_entry.py  data_queue.py  get_invalid_urls.py  get_party_data.py  party_scraper.py  test_party_data_fetch.py
standpoints/scripts/party_data/centerpartiet/: get_opinions.py  get_pages.py
standpoints/scripts/party_data/kristdemokraterna/: get_pages.py
standpoints/scripts/party_data/liberalerna/: get_opinions.py  get_pages.py
standpoints/scripts/party_data/miljopartiet/: get_opinions.py  get_pages.py
standpoints/scripts/party_data/moderaterna/: get_opinions.py  get_pages.py
standpoints/scripts/party_data/scrapers/: __init__.py  c_scraper.py  kd_scraper.py  l_scraper.py  m_scraper.py  mp_scraper.py  s_scraper.py  sd_scraper.py  v_scraper.py
standpoints/scripts/party_data/socialdemokraterna/: get_opinions.py  get_pages.py
standpoints/scripts/party_data/sverigedemokraterna/: get_pages.py
standpoints/scripts/party_data/vansterpartiet/: get_opinions.py  get_pages.py
