[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "partiguiden_backend"
version = "1.0"
dependencies = [
    "django",
    "psycopg2-binary",
    "djangorestframework",
    "django-filter",
    "gunicorn",
    "django-heroku",
    "django-cors-headers",
    "djangorestframework-simplejwt",
    "sentry-sdk",
    "beautifulsoup4",
    "google-analytics-data",
    "pyyaml",
    "uritemplate",
    "aiohttp",
    "django-stubs-ext"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "mypy",
    "types-requests",
    "types-beautifulsoup4",
    "pre-commit",
    "django-stubs",
    "djangorestframework-stubs"
]


[tool.black]
line-length = 120
exclude = "/*migrations/*/"

[tool.isort]
line_length = 120
skip="migrations"
profile="black"

[tool.mypy]
files = "partiguiden,standpoints"
# Plugins
plugins = "mypy_drf_plugin.main,mypy_django_plugin.main"

ignore_missing_imports = true
# Similar to --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
implicit_reexport = false

[tool.django-stubs]
django_settings_module = "partiguiden.settings"
